--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for LinkedIn and social media preview -->
+<meta property="og:title" content="Lasya Dodla | Portfolio Website" />
+<meta property="og:description" content="A responsive portfolio showcasing my skills in full stack development. Created with HTML, CSS, and JavaScript." />
+<meta property="og:image" content="https://raw.githubusercontent.com/DodlaLasya/portfolio-website/main/assets/images/lasya_profile.jpeg" />
+<meta property="og:url" content="https://dodlalasya.github.io/portfolio-website/" />
+<meta property="og:type" content="website" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
