--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>I am a Full-Stack developer . 
           I am an  Computer Science Engineer undergraduate from Audisankara Institute Of Technology.
           I am very passionate about improving my coding skills & developing applications & websites.
-          I build WebApps and Websites using MERN Stack.
+          I build WebApps .
           Working for myself to improve my skills.
           Love to build Full-Stack clones. </p>
         
